--- a/about.html
+++ b/about.html
@@ -8,9 +8,10 @@
 	<ul>
 	   <li class='active'><a href='index.html'><span>Home</span></a></li>
 	   <li><a href='#'><span>Products</span></a></li>
-	   <li class='last'><a href='about.html'><span>About</span></a></li>
+	   <li><a href='about.html'><span>About</span></a></li>
 	</ul>
 	</div>
-	<img id="logo" src="img.png">
+	<p id="about">About Us</p>
+	<p id="aboutp">We are commited to giving kids at ISB the freedom to play video games at school. With our dedicated servers and gigabit internet, we are one of the finest VPN servers around.</p>
 </body>
 </html>
