--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 <head>
+<link rel="icon" 
+      type="image/png" 
+      href="https://upload.wikimedia.org/wikipedia/en/thumb/9/93/Pittsburgh_Panthers_Alternate_Logo.svg/150px-Pittsburgh_Panthers_Alternate_Logo.svg.png">
 	<title>ISVPN</title>
 	<link rel="stylesheet" href="css.css" type="text/css">
 </head>
