--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div id='cssmenu'>
 	<ul>
 	   <li class='active'><a href='index.html'><span>Home</span></a></li>
-	   <li><a href='#'><span>Products</span></a></li>
+	   <li><a href='products.html'><span>Products</span></a></li>
 	   <li class='last'><a href='about.html'><span>About</span></a></li>
 	</ul>
 	</div>
