--- a/products.html
+++ b/products.html
@@ -4,22 +4,27 @@
       type="image/png"  href="https://upload.wikimedia.org/wikipedia/en/thumb/9/93/Pittsburgh_Panthers_Alternate_Logo.svg/150px-Pittsburgh_Panthers_Alternate_Logo.svg.png">
 	<title>PRODUCTS</title>
 	<link rel="stylesheet" href="css.css" type="text/css">
+    <link rel="stylesheet" href="cash.css" type="text/css">
 </head>
 <body>
 	<div id='cssmenu'>
 	<ul>
-	   <li class='active'><a href='index.html'><span>Home</span></a></li>
+	   <li  class='active'><a href='index.html'><span>Home</span></a></li>
 	   <li><a href='products.html'><span>Products</span></a></li>
 	   <li class='last'><a href='about.html'><span>About</span></a></li>
 	</ul>
 	</div>
     <div class="shit">
-        <img id="pic" style="float:right;" src="bronze.png"/>
-        <h1 id="price">100 Baht / Month</h1>
-        <img id="pic" style="float:center;" src="silver.png"/>
-        <h1 id="price">300 Baht / Month</h1>
-        <img id="pic" style="float:left;" src="gold.png"/>
-        <h1 id="price">500 Baht / Month</h1>
+        <ul >
+        
+        <li style="display:inline-block"><img id="pic" style="float:right;" src="bronze.png"/>
+        <p id="price">300</p></li>
+        <li style="display:inline-block"><img id="pic" style="float:center;" src="silver.png"/>
+        <p id="price">400</p></li>
+        <li style="display:inline-block"><img id="pic" style="float:left;" src="gold.png"/>
+        <p id="price">500</p></li>
+            
+        </ul>
     </div>
 </body>
 </html>
